merge p2 1.0 into publisher branch